<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DogShelter</string>

    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_profile">Profile</string>
    <string name="title_chats">Chats</string>

    <string name="next">Next</string>
    <string name="skip">Skip</string>

    <string name="oops">Oops!</string>
    <string name="no_connection">No Internet connection. Check it and try again.</string>
    <string name="retry">Retry</string>

    <string name="search_hint">Who are you looking for?</string>
    <string name="no_such_dog">We don\'t have dogs with that name</string>

    <string name="auth_dialog_message">You must be logged in to add a pet to your favorites</string>
    <string name="auth_dialog_cancel">Cancel</string>
    <string name="auth_dialog_apply">Apply</string>

    <string name="e_mail" translatable="false">e-mail</string>
    <string name="password">Password</string>
</resources>